fixed broken css and template

--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -33,3 +33,9 @@
 background-color: darkgrey;
 outline: 1px solid slategrey;
 }
+
+.container {
+  background: #fff;
+  height: 100vh;
+  position: relative;
+}
