--- a/src/styles.css
+++ b/src/styles.css
@@ -11,8 +11,4 @@ body {
   margin-left: 10px;
 }
 
-.container {
-  background: #fff;
-  height: 100vh;
-  position: relative;
-}
+
